@@ -369,7 +369,7 @@
 //-- AM_CANNIBALIZE
 232,2000,500,0,300000:240000:180000:120000:60000,0
 //-- AM_SPHEREMINE
-233,2000,500,0,40000:50000:60000:70000:80000,0
+233,2000,500,0,30000,0
 //-- AM_CP_WEAPON
 234,2000,0,0,120000:240000:360000:480000:600000,0
 //-- AM_CP_SHIELD
