@@ -37,6 +37,9 @@
 	2376 General's_Plate_Mail	Increases heal recovery effectiveness on you by 10%
 
 =======================
+01/09
+	* Corrected duration of sphere mines to be 30 secs regardless of skill
+	  level. [Skotlex]
 12/28
 	* Updated MVP drops to 11.2 [Playtester]
 	- also increased speed of Lord of the Death
